--- a/src/app/modules/commons/users/profile/billing.html
+++ b/src/app/modules/commons/users/profile/billing.html
@@ -6,7 +6,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center">
+            <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
                     <span class="small">{{'profile.label.avatar' | translate }}</span>
