--- a/src/app/modules/home/notifications/notifications.html
+++ b/src/app/modules/home/notifications/notifications.html
@@ -1,56 +1,64 @@
-<div class="container">
+<div class="widget card blue-grey lighten-4 blue-grey-text text-darken-2">
+    <div class="card-content colorMain white-text">
+        <i class="fa fa-bell"></i>
+        {{dashboard.widgetNotifications.title  | translate}}
 
-    <!-- space between header menu and body-->
-    <div class="row"></div>
-    <div class="row">
-        <div class="col" ng-class="{'s12': !id, 's4' : id}">
-            <ul class="collection grey-text text-darken-2">
-                <li class="collection-item avatar" ng-repeat="n in notifications"
-                    ng-class="{'grey lighten-1' : n.read && n._id !== id, 'colorSecondary' : n._id === id}">
-                    <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle hide-on-med-and-down">
-                    <a href="javascript:void(0);" class="title" 
-                       ng-class="{'white-text' : n._id === id, 'red-text text-lighten-2' : n._id !== id}"
-                       ng-bind="n.title" ng-click="show(n._id)"></a>
-                    <p><span class="truncate" ng-bind="n.exerp"></span> <br>
-                        <small>{{n.senderId.firstname}} {{n.senderId.name}} | {{n.timestamp | date : 'short'}} |
-                            <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
-                               class="waves-effect waves-teal btn-flat"
-                               style="padding: 0;">
-                                <i class="tiny material-icons" ng-if="n.read"
-                                   title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-                                    class="tiny material-icons" ng-if="!n.read"
-                                    title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-                            <a href="javascript:void(0);" ng-click="deleteNotification(n._id)" style="padding: 0;"
-                               class="waves-effect waves-teal btn-flat"><i
-                                    class="tiny material-icons"
-                                    title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
-                        </small>
-                    </p>
-                    <a href="javascript:void(0);" class="secondary-content"><i class="material-icons md-24 light-green-text text-lighten-1" ng-click="show(n._id)">forward</i></a>
-                </li>
-            </ul>
-        </div>
-        <div class="col s8" ng-if="id">
-            <div class="card-panel" ng-if="notif">
-                <h4><a href="javascript:void(0);" ng-bind="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
-                <p ng-bind-html="notif.content" style="text-align: justify"></p>
-                <small>{{notif.timestamp | date : 'short'}}
-                    |
-                    <a href="javascript:void(0);" ng-click="markAsRead(notif._id)"
-                       class="waves-effect waves-teal btn-flat" style="padding: 0;">
-                        <i class="tiny material-icons" ng-if="notif.read"
-                           title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-                            class="tiny material-icons" ng-if="!notif.read"
-                            title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-                    <a href="javascript:void(0);" ng-click="deleteNotification(notif._id)" style="padding: 0;"
-                       class="waves-effect waves-teal btn-flat"><i class="tiny material-icons"
-                                                                   title="{{'headerMenu.notifications.delete' | translate}}">delete</i>
-                    </a>
-                </small>
+    </div>
+    <div class="widget-content container" style="overflow-y: auto; height:250px;">
+
+        <!-- space between header menu and body-->
+        <div class="row"></div>
+        <div class="row">
+            <div class="col" ng-class="{'s12': !id, 's4' : id}">
+                <ul class="collection grey-text text-darken-2">
+                    <li class="collection-item avatar" ng-repeat="n in notifications"
+                        ng-class="{'grey lighten-1' : n.read && n._id !== id, 'colorSecondary' : n._id === id}">
+                        <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle hide-on-med-and-down">
+                        <a href="javascript:void(0);" class="title" 
+                           ng-class="{'white-text' : n._id === id, 'red-text text-lighten-2' : n._id !== id}"
+                           ng-bind="n.title" ng-click="show(n._id)"></a>
+                        <p><span class="truncate" ng-bind="n.exerp"></span> <br>
+                            <small>{{n.senderId.firstname}} {{n.senderId.name}} | {{n.timestamp | date : 'short'}} |
+                                <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
+                                   class="waves-effect waves-teal btn-flat"
+                                   style="padding: 0;">
+                                    <i class="tiny material-icons" ng-if="n.read"
+                                       title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
+                                        class="tiny material-icons" ng-if="!n.read"
+                                        title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
+                                <a href="javascript:void(0);" ng-click="deleteNotification(n._id)" style="padding: 0;"
+                                   class="waves-effect waves-teal btn-flat"><i
+                                        class="tiny material-icons"
+                                        title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
+                            </small>
+                        </p>
+                        <a href="javascript:void(0);" class="secondary-content"><i class="material-icons md-24 light-green-text text-lighten-1" ng-click="show(n._id)">forward</i></a>
+                    </li>
+                </ul>
             </div>
-        </div>
-        <div class="card-panel" ng-if="notifications.length ===0">
-                <h4 class="center-align" translate="notifications.nodata"></h4>
+            <div class="col s8" ng-if="id">
+                <div class="card-panel" ng-if="notif">
+                    <h4><a href="javascript:void(0);" ng-bind="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
+                    <p ng-bind-html="notif.content" style="text-align: justify"></p>
+                    <small>{{notif.timestamp | date : 'short'}}
+                        |
+                        <a href="javascript:void(0);" ng-click="markAsRead(notif._id)"
+                           class="waves-effect waves-teal btn-flat" style="padding: 0;">
+                            <i class="tiny material-icons" ng-if="notif.read"
+                               title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
+                                class="tiny material-icons" ng-if="!notif.read"
+                                title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
+                        <a href="javascript:void(0);" ng-click="deleteNotification(notif._id)" style="padding: 0;"
+                           class="waves-effect waves-teal btn-flat"><i class="tiny material-icons"
+                                                                       title="{{'headerMenu.notifications.delete' | translate}}">delete</i>
+                        </a>
+                    </small>
+                </div>
             </div>
+            <div class="card-panel" ng-if="notifications.length ===0">
+                    <h4 class="center-align" translate="notifications.nodata"></h4>
+                </div>
+        </div>
+
     </div>
 </div>
