--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,54 +1,94 @@
-<!-- cup, championship, friendly game -->
-<div ng-if="loading" class="center-align">
-    <div class="preloader-wrapper big active">
-        <div class="spinner-layer">
-            <div class="circle-clipper left">
-                <div class="circle"></div>
-            </div>
-            <div class="gap-patch">
-                <div class="circle"></div>
-            </div>
-            <div class="circle-clipper right">
-                <div class="circle"></div>
-            </div>
-        </div>
+<div class="widget card white blue-grey-text text-darken-2">
+    <div class="card-content colorMain white-text">
+        <i class="fa fa-futbol-o"></i>{{dashboard.widgetTopScored.title | translate}}
+
+        <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
+            <i class="material-icons right">
+                {{ widget.contentStyle.display ===
+                'none'?'expand_more':''}}{{widget.contentStyle.display !==
+                'none'?'expand_less':''}}
+            </i>
+        </span>
+        <span ng-if="widget.activator"><i class="activator material-icons right">more_vert</i></span>
     </div>
-</div>
-<div style="padding-top:20px;" ng-if="!loading">
-        <div class="row center-align">
-            <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
-                                       background-repeat:no-repeat; 
-                                       background-size: 80% 100%;
-                                       background-position: center;">
-                <br>
-                <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'"></simple-avatar>
-                <br> {{players[0].firstname}}
-                <br> 
-                <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
-                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
-            </div>
-            <div class="col s4" style="background-image:url(/assets/images/trophy2.png); 
-                                       background-repeat:no-repeat; 
-                                       background-size: 80% 100%;
-                                       background-position: center;">
-                <br>
-                <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'"></simple-avatar> 
-                <br> {{players[1].firstname}}
-                <br> 
-                 <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
-                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
-            </div>
-            
-            <div class="col s4" style="background-image:url(/assets/images/trophy3.png); 
-                                       background-repeat:no-repeat; 
-                                       background-size: 80% 100%;
-                                       background-position: center;">
-                <br>
-                <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'"></simple-avatar>
-                <br> {{players[2].firstname}}
-                <br> 
-                <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
-                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
+    <div class="widget-content container" style="overflow-y: auto; height:250px;">
+        <!-- cup, championship, friendly game -->
+        <div ng-if="loading" class="center-align">
+            <div class="preloader-wrapper big active">
+                <div class="spinner-layer">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div style="padding-top:20px;" ng-if="!loading">
+            <div class="row center-align">
+                <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
+                                           background-repeat:no-repeat; 
+                                           background-size: 80% 100%;
+                                           background-position: center;">
+                    <br>
+                    <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'"></simple-avatar>
+                    <br> {{players[0].firstname}}
+                    <br> 
+                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
+                </div>
+                <div class="col s4" style="background-image:url(/assets/images/trophy2.png); 
+                                           background-repeat:no-repeat; 
+                                           background-size: 80% 100%;
+                                           background-position: center;">
+                    <br>
+                    <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'"></simple-avatar> 
+                    <br> {{players[1].firstname}}
+                    <br> 
+                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
+                </div>
+
+                <div class="col s4" style="background-image:url(/assets/images/trophy3.png); 
+                                           background-repeat:no-repeat; 
+                                           background-size: 80% 100%;
+                                           background-position: center;">
+                    <br>
+                    <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'"></simple-avatar>
+                    <br> {{players[2].firstname}}
+                    <br> 
+                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
+                </div>
+            </div>
+        </div>
+    
+    </div>
+
+    <div class="card-reveal">
+        <span class="card-title">
+            <small><i class="fa fa-futbol-o"></i>
+            {{widget.title  | translate}}
+            <i class="material-icons right">close</i></small></span>
+        <table>
+            <thead>
+            <tr>
+                <th data-field="indicators"></th>
+                <th ng-repeat="p in series track by $index" data-field="{{p}}" class="center-align" ng-bind="p"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="l in labels track by $index">
+                <td><b ng-bind="l"></b></td>
+                <td ng-repeat="d in data track by $index" data-field="{{d[$parent.$index]}}" class="center-align">
+                    {{d[$parent.$index]}}
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
