--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -6,7 +6,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center">
+            <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
                     <span class="small">{{'profile.label.avatar' | translate }}</span>
@@ -128,8 +128,19 @@
 	                    <div class="row" id="rowBirthdate">
 		                    <div class="col s12 input-field">
 		                        <label for="profilBirthdate">{{'profile.label.birthdate' | translate }} <span class="red-text text-lighten-1">*</span></label>
-		                        <input type="text" class="datepicker" id="profilBirthdate" name="profilBirthdate" ng-model="user.birthdate"
-		                                required ng-class="{'invalid': profileForm.profilBirthdate.$invalid}"/>
+                                <input type="text" id="profilBirthdate" name="profilBirthdate" ng-model="user.birthdate" date-options="dateOptions" custom-datepicker required/>
+		                        
+                                <script type="text/ng-template" id="custom-datepicker.html">
+                                <div>
+                                    <div class="proxied-field-wrap">
+                                        <input type="text" ui-date-format="yy-mm-dd" ng-model="user.birthdate" ui-date="dateOptions"/>
+                                    </div>
+                                    <label>
+                                        <button class="btn" type="button"><i class="material-icons md-48">mode_edit</i></button>
+                                        <span class="datepicker-date">{{user.birthdate | date:'d MMM yyyy'}}</span>
+                                    </label>
+                                </div>
+                                </script>
 		                        <span class="small red-text text-lighten-1"
 		                            ng-show="profileForm.profilBirthdate.$invalid && !profileForm.profilBirthdate.$pristine" translate="civilSection.userErrors.BirthDate">
 		                        </span>
@@ -160,7 +171,7 @@
                 	</div>
                 	<div class="col m1 hide-on-small-only">&nbsp;</div>
                 </div>
-
+                
 
                 <!-- actions buttons -->
                 <div class="row">
@@ -175,6 +186,7 @@
                 <script type="text/javascript">
                 	document.getElementById('rowGender').style.height=$("#rowBirthdate").height() + "px";
                 </script>
+                
             </form>
         </div>
     </div>
