--- a/src/app/components/directives/widgets/stats/efficiency/efficiencyPlayer.html
+++ b/src/app/components/directives/widgets/stats/efficiency/efficiencyPlayer.html
@@ -1,23 +1,39 @@
-<!-- efficiency gauge -->
-<div ng-if="loading" class="center-align">
-    <div class="preloader-wrapper big active">
-        <div class="spinner-layer">
-            <div class="circle-clipper left">
-                <div class="circle"></div>
-            </div>
-            <div class="gap-patch">
-                <div class="circle"></div>
-            </div>
-            <div class="circle-clipper right">
-                <div class="circle"></div>
+<div class="widget card white blue-grey-text text-darken-2">
+    <div class="card-content colorMain white-text">
+        <i class="fa fa-futbol-o"></i>{{dashboard.widgetTopScored.title | translate}}
+
+        <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
+            <i class="material-icons right">
+                {{ widget.contentStyle.display ===
+                'none'?'expand_more':''}}{{widget.contentStyle.display !==
+                'none'?'expand_less':''}}
+            </i>
+        </span>
+        <span ng-if="widget.activator"><i class="activator material-icons right">more_vert</i></span>
+    </div>
+    <div class="widget-content container" style="overflow-y: auto; height:200px;">
+        <div ng-if="loading" class="center-align">
+            <div class="preloader-wrapper big active">
+                <div class="spinner-layer">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div ng-if="!loading">
+            <div class="center-align" ng-show="noStat">
+                <h2 class="">{{efficiency | number : 0}} <small>%</small> </h2>
+                <h5 class="right-align">{{nbGoal}} buts / {{nbShoot}} tirs</h5>
+            </div>
+            <div class="card-content center-align" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+        </div>
     </div>
-</div>
-<div ng-if="!loading">
-    <div class="center-align" ng-show="noStat">
-        <h2 class="">{{efficiency | number : 0}} <small>%</small> </h2>
-        <h5 class="right-align">{{nbGoal}} buts / {{nbShoot}} tirs</h5>
-    </div>
-    <div class="card-content center-align" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
