--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -147,7 +147,7 @@
                            translate="commons.buttons.cancel" tabindex="9"></a>
                         <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1"
                                 style="max-width:50%"
-                                translate="commons.buttons.validate" ng-disabled="signupForm.$invalid" tabindex="8"/>
+                                translate="commons.buttons.validate" ng-disabled="signupForm.$invalid" tabindex="8" ></button>
                     </div>
                 </div>
             </form>
