#140707473057539 : [Christophe Kervella] Changer Filter en Filtrer partout dans le site

--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -56,7 +56,7 @@
             <div class="col s12">
                 <form class="forms forms-inline input-field">
                     <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
-                    <label for="queryPlayer">Filter</label>
+                    <label for="queryPlayer" translate="commons.buttons.filter"></label>
                 </form>
             </div>
             <div class="col s12 left-align">
