--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -37,7 +37,7 @@
                 <div class="col s8">
                     <form class="forms forms-inline input-field">
                         <input type="text" id="queryTeam" class="grey lighten-4" ng-model="queryTeam">
-                        <label for="queryTeam">Filter</label>
+                        <label for="queryTeam" translate="commons.buttons.filter"></label>
                     </form>
                 </div>
 
