--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -68,7 +68,7 @@
                             </h5>
                             <span class="small right-align">{{selectedPlayers.length}} {{'effectiveLabels.effectiveNbPlayers' | translate }}</span>
                             <div class="input-field">
-                                <label for="query">Filter</label>
+                                <label for="query" translate="commons.buttons.filter"></label>
                                 <input type="text" class="grey lighten-4" id="query" ng-model="query">
                             </div>
                         </li>
