--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -83,7 +83,7 @@
                 <div class="col m8 s12">
                     <form class="forms forms-inline input-field">
                         <input type="text" id="queryPlayer" class="grey lighten-4" ng-model="queryPlayer">
-                        <label for="queryPlayer">Filter</label>
+                        <label for="queryPlayer" translate="commons.buttons.filter"></label>
                     </form>
                 </div>
 
