--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -46,10 +46,14 @@
                 </div>
             </div>
             <canvas ng-if="!noData" id="bar" class="chart chart-bar" chart-data="data"
-                    chart-colours="colours" height="200"
-                    chart-labels="labels" chart-legend="true" chart-series="series"
-            >
+                    height="200" chart-labels="labels" chart-series="series">
             </canvas>
+            <ul ng-if="!noData" class="bar-legend">
+                <li ng-repeat="p in series track by $index">
+                    <span class="bar-legend-icon" style="background-color:{{legendColours[$index]}}"></span>
+                    <span class="bar-legend-text" ng-bind="p"></span>
+                </li>
+            </ul>
             <table>
                 <thead>
                 <tr>
