Input date et aimer on event

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Menu Not connected -->
-<nav class="top-nav " ng-class="{ 'white top-nav-trans': isActive('/'), 'colorSecondary': !isActive('/')}"
+<nav class="top-nav " ng-class="{ 'top-nav-trans': isActive('/'), 'colorSecondary': !isActive('/')}"
      role="navigation" ng-hide="user">
     <div class="container">
         <div class="nav-wrapper">
