--- a/src/app/components/directives/widgets/notifications/notifications.html
+++ b/src/app/components/directives/widgets/notifications/notifications.html
@@ -1,4 +1,4 @@
-<div class="widget card blue-grey lighten-4 blue-grey-text text-darken-2">
+<div class="card blue-grey lighten-4 blue-grey-text text-darken-2">
     <div class="card-content colorMain white-text">
         <i class="fa fa-bell"></i>
         {{dashboard.widgetNotifications.title  | translate}}
