--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,4 +1,6 @@
-<div class="widget card white blue-grey-text text-darken-2">
+
+
+<div class="card white blue-grey-text text-darken-2">
     <div class="card-content colorMain white-text">
         <i class="fa fa-futbol-o"></i>{{dashboard.widgetTopScored.title | translate}}
 
