--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -51,10 +51,14 @@
                                     class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col s8">
-                            <input id="EventStartHours" class="timepicker" name="EventStartHours" type="text"
+                            <input id="EventStartHours" input-clock data-twelvehour="false" data-donetext="{{close}}" data-default="now" type="text"
                                    ng-model="startHours" required
                                    ng-class="{ 'has-error' : eventForm.EventStartHours.$invalid && !eventForm.EventStartHours.$pristine }"/>
+                            
+                            <!--<input id="EventStartHours" class="timepicker" name="EventStartHours" type="text"
+                                   />-->
                         </div>
+                        
                         <div class="small red-text text-lighten-1 col s12"
                              ng-show="eventForm.EventStartHours.$invalid && !eventForm.EventStartHours.$pristine"
                              translate="eventErrors.StartHour"></div>
@@ -78,7 +82,7 @@
                                     class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col s9">
-                            <select class="browser-default blue-grey-text text-darken-1" name="eventType"
+                            <select class="" material-select watch name="eventType"
                                     ng-model="event.link.type"
                                     required id="EventType" ng-change="changeEventType()"
                                     ng-class="{ 'has-error' : eventForm.eventType.$invalid && !eventForm.eventType.$pristine }">
